<resources>
    <string name="app_name">BasicApplication</string>
    <string name="open_facebook">Open facebook</string>
    <string name="open_linkedin">Open linkedin</string>
    <string name="open_instagram">Open instagram</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="settings">Settings</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="register">Register</string>
    <string name="tos">By clicking Register you agree to our Terms and Conditions</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google">Google</string>
    <string name="or">or</string>
    <string name="incorrect_mail">Incorrect E-Mail address</string>
    <string name="incorrect_password">Your password must include a minimum of 8 characters</string>
    <string name="signup_error">Please enter correct email and password</string>
    <string name="incorrect_user_name">User name must contain at least 3 letters</string>
    <string name="incorrect_phone_number">Phone number must be at least 10 digits long</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="removed_contact">Contact was removed</string>
    <string name="removed_contacts">Contacts were removed</string>
    <string name="undo">Undo</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="add_contact">Add contact</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="cancel">Cancel</string>
    <string name="forward">Forward</string>
    <string name="hello">Hello!</string>
    <string name="enter_your_email_and_password_below">Enter your email and password below</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_email_error">Incorrect email or password. Please check your inputs and try again</string>
    <string name="network_error">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="sign_up_error">This user already exists</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="edit_user_error">Please enter correct data</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="date_error_first_half">Your birth date should be in format:</string>
    <string name="users">Users</string>
    <string name="add">Add</string>
    <string name="error_occurred">Error occurred</string>
    <string name="you_don_t_have_any_contacts">You don\'t have any contacts</string>
</resources>