<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/upper_layout_color"
    tools:context=".presentation.ui.loginGraph.SignUpFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/percent26Horizontal"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/percent10Horizontal"
        app:shapeAppearanceOverlay="@style/rounded"
        app:srcCompat="@mipmap/ic_unknown_user_round" />

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:paddingTop="@dimen/image_icon_padding"
        android:text="@string/your_profile_data"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/huge_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/percent26Horizontal" />

    <TextView
        android:id="@+id/text_subHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:paddingTop="@dimen/checkbox_padding"
        android:text="@string/fill_out_the_profile_and_go_to_the_application"
        android:textColor="@color/sub_text_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:paddingHorizontal="@dimen/edit_text_padding"
        android:paddingTop="@dimen/image_icon_padding"
        android:paddingBottom="@dimen/edit_text_padding"
        android:text="@string/user_name"
        android:textColor="@color/sub_text_color"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toStartOf="@+id/percent4Vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_subHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_name"
        style="@style/textInputLayoutMainStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/percent96Vertical"
        app:layout_constraintStart_toStartOf="@+id/percent4Vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_user_name"
            style="@style/textInputEditTextMain" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_mobile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:paddingHorizontal="@dimen/edit_text_padding"
        android:paddingBottom="@dimen/edit_text_padding"
        android:text="@string/mobile_phone"
        android:textColor="@color/sub_text_color"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toStartOf="@+id/percent4Vertical"
        app:layout_constraintTop_toBottomOf="@+id/til_user_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobile_phone"
        style="@style/textInputLayoutMainStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/percent96Vertical"
        app:layout_constraintStart_toStartOf="@+id/percent4Vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_mobile_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_mobile_phone"
            style="@style/textInputEditTextMain"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/smallButton"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/distance_between_small_and_big_btns"
        android:backgroundTint="@color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/main_text_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_forward"
        app:layout_constraintEnd_toEndOf="@+id/percent96Vertical"
        app:layout_constraintStart_toStartOf="@+id/percent4Vertical"
        app:strokeColor="@color/main_text_color"
        app:strokeWidth="@dimen/boarder_width" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forward"
        style="@style/bigButton"
        android:layout_width="0dp"
        android:backgroundTint="@color/big_button_color"
        android:text="@string/forward"
        app:layout_constraintBottom_toBottomOf="@+id/percent98Horizontal"
        app:layout_constraintEnd_toEndOf="@+id/percent96Vertical"
        app:layout_constraintStart_toStartOf="@+id/percent4Vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/percent4Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/percent96Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/percent10Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/percent26Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/percent98Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <FrameLayout
        android:id="@+id/signUpExtended_progressWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/upper_layout_color_70_percent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/signUpExtended_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>